[gd_scene load_steps=13 format=3 uid="uid://b11jfnrqpx205"]

[ext_resource type="Script" uid="uid://dnxyonvfbv0xo" path="res://addons/channel_surfer/scripts/channel_dock.gd" id="1_t706h"]
[ext_resource type="Texture2D" uid="uid://dgpg0vkof5usy" path="res://addons/channel_surfer/assets/debug_icon.png" id="2_7qho6"]
[ext_resource type="Texture2D" uid="uid://47fdem0fpjjc" path="res://addons/channel_surfer/assets/item_alert_icon.png" id="3_n3fpa"]
[ext_resource type="Texture2D" uid="uid://bm08ef48qfy7v" path="res://addons/channel_surfer/assets/locked_icon.png" id="4_l30ru"]
[ext_resource type="Texture2D" uid="uid://b61sh7ngcyi8y" path="res://addons/channel_surfer/assets/unlocked_icon.png" id="5_0xcfh"]
[ext_resource type="Texture2D" uid="uid://vc3v02y8u6u0" path="res://addons/channel_surfer/assets/channel_icon.png" id="6_uu6rb"]
[ext_resource type="Texture2D" uid="uid://bsu6x77fkrvwl" path="res://addons/channel_surfer/assets/arrow_collapsed_icon.png" id="7_sa46k"]
[ext_resource type="Texture2D" uid="uid://dwv00nqrkul7d" path="res://addons/channel_surfer/assets/arrow_icon.png" id="8_x2hjt"]
[ext_resource type="Script" uid="uid://cfsyxh23qvyrx" path="res://addons/channel_surfer/scripts/channel_tree.gd" id="9_sycqf"]
[ext_resource type="Texture2D" uid="uid://be25vlrrme5xi" path="res://addons/channel_surfer/assets/item_create_icon.png" id="10_05c2w"]
[ext_resource type="Texture2D" uid="uid://0tgeu4yftsm2" path="res://addons/channel_surfer/assets/item_remove_icon.png" id="11_nps6d"]
[ext_resource type="Script" uid="uid://bbbqt2g1m1xka" path="res://addons/channel_surfer/scripts/channel_debug.gd" id="12_yodnt"]

[node name="Waves" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t706h")
debug_icon = ExtResource("2_7qho6")
alert_icon = ExtResource("3_n3fpa")
locked_icon = ExtResource("4_l30ru")
unlocked_icon = ExtResource("5_0xcfh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ChannelButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Channels"
icon = ExtResource("6_uu6rb")

[node name="DebugButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Debug"
icon = ExtResource("2_7qho6")

[node name="ChannelTree" type="Tree" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/guide_color = Color(1, 1, 1, 0.3)
theme_override_constants/draw_guides = 1
theme_override_constants/draw_relationship_lines = 0
theme_override_icons/arrow = ExtResource("7_sa46k")
theme_override_icons/arrow_collapsed = ExtResource("8_x2hjt")
hide_root = true
script = ExtResource("9_sycqf")
add_item_icon = ExtResource("10_05c2w")
remove_item_icon = ExtResource("11_nps6d")

[node name="ChannelDebug" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(1, 0.47058824, 0.41960785, 1)
bbcode_enabled = true
script = ExtResource("12_yodnt")

[node name="LockButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
icon = ExtResource("5_0xcfh")
